2013-03-25  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/core/document.hh: Add more assertions.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/primitive/link/with_single_left_link_dmax_ratio_aligned.hh:
	Fix an invalid forward declaration.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* scribo/binarization/internal/global_max_stddev_functor.hh:
	Remove reference to mln namespace.

	* headers.mk,
	* scribo/tests/unit_test/unit-tests.mk: Regen.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* scribo/binarization/all.hh: Add missing includes.

	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/sauvola_threshold_functor.hh: Add
	input image as attribute.

2013-03-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Share a functor used in Wolf's binarization.

	* scribo/binarization/internal/global_max_stddev_functor.hh: New.

	* scribo/binarization/wolf.hh,
	* scribo/binarization/wolf_fast.hh: Remove functor declaration.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	* headers.mk: Regen.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* demo/viewer/image_region.hh: Add Q_INTERFACES.

	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/singh_functor.hh: Fix declaration
	of init() member.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* scribo/primitive/extract/lines_h_single.hh: Fix an invalid
	function name.

	* scribo/text/extract_paragraphs_hdoc.hh: Remove useless inline
	keyword.

	* scribo/toolchain/text_in_doc_preprocess.hh: Fix argument name.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/binarization/sauvola_ms.hh: Add a new overload and
	preconditions.

2013-03-20  Guillaume Lazzara  <z@lrde.epita.fr>

	Improve documentation layout.

	* doc/Doxyfile.in: Improve member functions presentation.

	* doc/DoxygenLayout.xml: Fix invalid xml elements.
